[tool.poetry]
name = "bdd-tests-python"
version = "0.1.0"
description = ""
authors = ["Kenneth Mensah <kenneth.mensah220000@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pytest = "^7.4.3"
pytest-bdd = "^7.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
